GABRIEL-VEIGA refactor: muda nomenclatura de enums, adiciona validacao para telefone, delete pedido de clientes deletados e retira botao carregar